@@ -238,5 +238,5 @@ const ConnectorContextualMenuComponent = memo(({}: ConnectorContextualMenuProps)
 
 export const ConnectorContextualMenu = memo(({}: ConnectorContextualMenuProps) => {
   const { isConnectionInProgress } = useConnector();
-  return isConnectionInProgress ? <ConnectorContextualMenuComponent /> : null;
+  return isConnectionInProgress() ? <ConnectorContextualMenuComponent /> : null;
 });
